docs - misc edits (#808)
* docs - add Note:  to notes

* docs - remove with PXF from some topic titles

* more misc edits

* try code tag in def list

* more code tags in def list

* fix table rendering

* more formatting edits

--- a/docs/content/cfghostport.html.md.erb
+++ b/docs/content/cfghostport.html.md.erb
@@ -1,17 +1,17 @@
 ---
-title: PXF Service Host and Port
+title: Service Host and Port
 ---
 
 By default, a PXF Service started on a Greenplum host listens on port number `5888` on `localhost`. You can configure PXF to start on a different port number, or use a different hostname or IP address. To change the default configuration, you will set one or both of the environment variables identified below:
 
 |   Environment Variable  |  Description      |
---------------------------+--------------------
+|-------------------------|-------------------|
 |   PXF_HOST  | The name of the host or IP address. The default host name is `localhost`.  |
 |   PXF_PORT  | The port number on which the PXF Service listens for requests on the host. The default port number is `5888`.  |
 
 Set the environment variables in the `gpadmin` user's `.bashrc` shell login file on each Greenplum host.
 
-<div class="note">You must restart both Greenplum Database and PXF when you configure the service host and/or port in this manner. Consider performing this configuration during a scheduled down time.</div>
+<div class="note"><b>Note:</b> You must restart both Greenplum Database and PXF when you configure the service host and/or port in this manner. Consider performing this configuration during a scheduled down time.</div>
 
 ## <a id="proc"></a>Procedure
 
