--- a/docs/content/access_objstore.html.md.erb
+++ b/docs/content/access_objstore.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Accessing Azure, Google Cloud Storage, MinIO, and S3 Object Stores with PXF
+title: Accessing Azure, Google Cloud Storage, MinIO, and S3 Object Stores
 ---
 
 <!--
@@ -77,7 +77,7 @@ You provide the profile name when you specify the `pxf` protocol on a `CREATE EX
 
 ## <a id="sample_ddl"></a>Sample CREATE EXTERNAL TABLE Commands
 
-<div class="note">When you create an external table that references a file or directory in an object store, you must specify a <code>SERVER</code> in the <code>LOCATION</code> URI.</div>
+<div class="note"><b>Note:</b> When you create an external table that references a file or directory in an object store, you must specify a <code>SERVER</code> in the <code>LOCATION</code> URI.</div>
 
 The following command creates an external table that references a text file on S3. It specifies the profile named `s3:text` and the server configuration named `s3srvcfg`:
 
