Docs/orc write dyozie (#849)
* wip docs - pxf supports orc write

* docs - consistently use code font for <column_name>

* ORC-format -> ORC-formatted

* Review feedback for hdfs_orc.html.md.erb

* Review feedback for objstore_orc.html.md.erb

* Grammar fix

* Apply suggestions from code review

Accepting proposed changes to SQL commands.

Co-authored-by: Bradford D. Boyle <bradfordb@vmware.com>

* Update read and write examples using suggestions from bradfordb-vmware

Co-authored-by: Lisa Owen <lowen@pivotal.io>
Co-authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/docs/content/objstore_orc.html.md.erb
+++ b/docs/content/objstore_orc.html.md.erb
@@ -1,15 +1,15 @@
 ---
-title: Reading ORC Data from an Object Store
+title: Reading and Writing ORC Data in an Object Store
 ---
 
-The PXF object store connectors support reading ORC-format data. This section describes how to use PXF to access ORC data in an object store, including how to create and query an external table that references a file in the store.
+The PXF object store connectors support reading and writing ORC-formatted data. This section describes how to use PXF to access ORC data in an object store, including how to create and query an external table that references a file in the store.
 
-**Note**: Accessing ORC-format data from an object store is very similar to accessing ORC-format data in HDFS. This topic identifies object store-specific information required to read ORC data, and links to the [PXF Hadoop ORC documentation](hdfs_orc.html) where appropriate for common information.
+**Note**: Accessing ORC-formatted data from an object store is very similar to accessing ORC-formatted data in HDFS. This topic identifies object store-specific information required to read and write ORC data, and links to the [PXF Hadoop ORC documentation](hdfs_orc.html) where appropriate for common information.
 
 
 ## <a id="prereq"></a>Prerequisites
 
-Ensure that you have met the PXF Object Store [Prerequisites](access_objstore.html#objstore_prereq) before you attempt to read data from an object store.
+Ensure that you have met the PXF Object Store [Prerequisites](access_objstore.html#objstore_prereq) before you attempt to read data from or write data to an object store.
 
 
 ## <a id="datatype_map"></a>Data Type Mapping
@@ -19,7 +19,7 @@ Refer to [Data Type Mapping](hdfs_orc.html#datatype_map) in the PXF Hadoop ORC d
 
 ## <a id="orc_cet"></a>Creating the External Table
 
-Use the `<objstore>:orc` profile to read ORC-format files from an object store. PXF supports the following `<objstore>` profile prefixes:
+The PXF `<objstore>:orc` profiles support reading and writing data in ORC format. PXF supports the following `<objstore>` profile prefixes:
 
 | Object Store  | Profile Prefix |
 |-------|------------------------|
@@ -29,13 +29,14 @@ Use the `<objstore>:orc` profile to read ORC-format files from an object store. 
 | MinIO    | s3 |
 | S3    | s3 |
 
-The following syntax creates a Greenplum Database readable external table that references an ORC-format file:
+Use the following syntax to create a Greenplum Database external table that references an object store file. When you insert records into a writable external table, the block(s) of data that you insert are written to one or more files in the directory that you specified.
 
 ``` sql
-CREATE EXTERNAL TABLE <table_name>
+CREATE [WRITABLE] EXTERNAL TABLE <table_name>
     ( <column_name> <data_type> [, ...] | LIKE <other_table> )
 LOCATION ('pxf://<path-to-file>?PROFILE=<objstore>:orc&SERVER=<server_name>[&<custom-option>=<value>[...]]')
-FORMAT 'CUSTOM' (FORMATTER='pxfwritable_import');
+FORMAT 'CUSTOM' (FORMATTER='pxfwritable_import'|'pxfwritable_export')
+[DISTRIBUTED BY (<column_name> [, ... ] ) | DISTRIBUTED RANDOMLY];
 ```
 
 The specific keywords and values used in the Greenplum Database [CREATE EXTERNAL TABLE](https://docs.vmware.com/en/VMware-Tanzu-Greenplum/6/greenplum-database/GUID-ref_guide-sql_commands-CREATE_EXTERNAL_TABLE.html) command are described in the table below.
@@ -46,7 +47,8 @@ The specific keywords and values used in the Greenplum Database [CREATE EXTERNAL
 | PROFILE=\<objstore\>:orc    | The `PROFILE` keyword must identify the specific object store. For example, `s3:orc`. |
 | SERVER=\<server_name\>    | The named server configuration that PXF uses to access the data. |
 | \<custom&#8209;option\>=\<value\> | ORC supports customs options as described in the [PXF Hadoop ORC documentation](hdfs_orc.html#customopts). |
-| FORMAT 'CUSTOM' | Use `FORMAT` `'CUSTOM'` with  the `<objstore>:orc` profile. The `CUSTOM` `FORMAT` requires that you specify `(FORMATTER='pxfwritable_import')`. |
+| FORMAT 'CUSTOM' | Use `FORMAT` '`CUSTOM`' with `(FORMATTER='pxfwritable_export')` (write) or `(FORMATTER='pxfwritable_import')` (read). |
+| DISTRIBUTED BY    | If you want to load data from an existing Greenplum Database table into the writable external table, consider specifying the same distribution policy or `<column_name>` on both tables. Doing so will avoid extra motion of data between segments on the load operation. |
 
 If you are accessing an S3 object store, you can provide S3 credentials via custom options in the `CREATE EXTERNAL TABLE` command as described in [Overriding the S3 Server Configuration with DDL](access_s3.html#s3_override).
 
@@ -54,17 +56,25 @@ If you are accessing an S3 object store, you can provide S3 credentials via cust
 
 Refer to [Example: Reading an ORC File on HDFS](hdfs_orc.html#read_example) in the PXF Hadoop ORC documentation for an example. Modifications that you must make to run the example with an object store include:
 
-- Copying the file to the object store instead of HDFS. For example, to copy the file to S3:
+- Copying the segment files to the object store instead of HDFS. For example, to copy the files to S3:
 
     ``` shell
-    $ aws s3 cp /tmp/sampledata.orc s3://BUCKET/pxf_examples/
+    $ aws s3 cp /tmp/sample-orc-data s3://BUCKET/pxf_examples/
     ```
 
 - Using the `CREATE EXTERNAL TABLE` syntax and `LOCATION` keywords and settings described above. For example, if your server name is `s3srvcfg`:
 
     ``` sql
     CREATE EXTERNAL TABLE sample_orc( location TEXT, month TEXT, num_orders INTEGER, total_sales NUMERIC(10,2), items_sold TEXT[] )
-      LOCATION('pxf://BUCKET/pxf_examples/sampledata.orc?PROFILE=s3:orc&SERVER=s3srvcfg')
+      LOCATION('pxf://BUCKET/pxf_examples/sample-orc-data?PROFILE=s3:orc&SERVER=s3srvcfg')
     FORMAT 'CUSTOM' (FORMATTER='pxfwritable_import');
+    ```
+
+- Using the `CREATE WRITABLE EXTERNAL TABLE` syntax and `LOCATION` keywords and settings described above for the writable external table. For example, if your server name is `s3srvcfg`:
+
+    ``` sql
+    CREATE WRITABLE EXTERNAL TABLE write_to_sample_orc (location TEXT, month TEXT, num_orders INT, total_sales NUMERIC(10,2), items_sold TEXT[])
+      LOCATION ('pxf://BUCKET/pxf_examples/sample-orc-data?PROFILE=s3:orc&SERVER=s3srvcfg')
+    FORMAT 'CUSTOM' (FORMATTER='pxfwritable_export');
     ```
 
